--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^3.3.2",
     "choices.js": "^9.0.1",
+    "connect-mongo": "^5.1.0",
+    "connect-mongodb-session": "^3.1.1",
     "dayjs": "^1.9.1",
     "dhtmlx-gantt": "^7.1.12",
     "dropzone": "^5.9.2",
