--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "choices.js": "^9.0.1",
     "connect-mongo": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
+    "crypto": "^1.0.1",
     "dayjs": "^1.9.1",
     "dhtmlx-gantt": "^7.1.12",
     "dropzone": "^5.9.2",
