--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "ansi": "^0.3.1",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "broken-link-checker": "^0.7.8",
+    "broken-link-checker": "^0.6.7",
     "browser-sync": "^2.26.10",
     "cross-env": "^7.0.2",
     "cross-var": "^1.1.0",
@@ -38,8 +38,8 @@
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-prettier": "^3.4.0",
     "gh-pages": "^3.2.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^9.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clone": "^2.0.1",
     "gulp-concat": "^2.6.1",
@@ -48,15 +48,15 @@
     "gulp-if": "^3.0.0",
     "gulp-jsbeautifier": "^3.0.1",
     "gulp-jshint": "^2.1.0",
-    "gulp-nodemon": "^2.5.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
     "gulp-rtlcss": "^2.0.0",
     "gulp-sharp-responsive": "^0.4.0",
-    "gulp-sourcemaps": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "gulp-zip": "^5.1.0",
+    "gulp-zip": "^4.2.0",
     "jshint": "^2.13.6",
     "merge-stream": "^2.0.0",
     "pretty": "^2.0.0",
@@ -111,6 +111,7 @@
     "lottie-web": "^5.10.0",
     "mongoose": "^7.6.3",
     "mongoose-findorcreate": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^8.0.0",
