--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-prettier": "^3.4.0",
     "gh-pages": "^3.2.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^9.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clone": "^2.0.1",
@@ -85,10 +85,11 @@
     "crypto": "^1.0.1",
     "dayjs": "^1.9.1",
     "dhtmlx-gantt": "^7.1.12",
-    "dropzone": "^5.9.2",
+    "dropzone": "^5.9.3",
     "echarts": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.2",
     "express-session": "^1.17.3",
     "feather-icons": "^4.29.0",
     "flatpickr": "^4.6.13",
