--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "express-session": "^1.17.3",
     "feather-icons": "^4.29.0",
     "flatpickr": "^4.6.13",
+    "fs": "^0.0.1-security",
     "fullcalendar": "^5.11.3",
     "glightbox": "^3.2.0",
     "gsap": "^3.11.3",
