--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "mongoose": "^7.6.3",
     "mongoose-findorcreate": "^4.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^8.0.0",
