--- a/package.json
+++ b/package.json
@@ -1,135 +1,47 @@
 {
   "name": "pblakmns",
   "version": "1.1.0",
-  "description": "Dashboard & WebApp Template",
-  "main": "gulpfile.js",
+  "description": "Auxiallary Police Web App",
+  "main": "app.js",
   "scripts": {
-    "start": "gulp",
-    "start:prod": "cross-env MODE=PROD gulp",
-    "build": "cross-env MODE=PROD gulp build",
-    "build:test": "cross-env MODE=PROD gulp build:test",
-    "live": "gulp compile:all && cross-env MODE=PROD gulp live",
-    "publish": "gh-pages -d live",
-    "publish:force": "cross-var git push origin `git subtree split --prefix live $npm_package_version`:gh-pages --force",
-    "publish:f": "git push origin `git subtree split --prefix live main`:gh-pages --force",
-    "localhost": "ssh -R 80:localhost:3000 ssh.localhost.run"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Sharir Shazni Sazali",
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-transform-strict-mode": "^7.12.13",
-    "@babel/preset-env": "^7.14.2",
-    "@lopatnov/rollup-plugin-uglify": "^2.1.2",
-    "@mr-hope/gulp-sass": "^2.0.0",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "ansi": "^0.3.1",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "broken-link-checker": "^0.4.3",
-    "browser-sync": "^2.26.10",
-    "cross-env": "^7.0.2",
-    "cross-var": "^1.1.0",
-    "del": "^6.0.0",
-    "dotenv": "^10.0.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-prettier": "^3.4.0",
-    "gh-pages": "^3.2.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-clone": "^2.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-data": "^1.3.1",
-    "gulp-eslint": "^6.0.0",
-    "gulp-if": "^3.0.0",
-    "gulp-jsbeautifier": "^3.0.1",
-    "gulp-jshint": "^2.1.0",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-pug": "^5.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.3",
-    "gulp-rtlcss": "^2.0.0",
-    "gulp-sharp-responsive": "^0.4.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "gulp-zip": "^4.2.0",
-    "jshint": "^2.13.6",
-    "merge-stream": "^2.0.0",
-    "pretty": "^2.0.0",
-    "pug": "^3.0.2",
-    "require-dir": "^1.2.0",
-    "rollup": "^2.72.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-conditional": "^3.1.2",
-    "sass": "^1.37.5",
-    "through2": "^4.0.2",
-    "uuid": "^8.3.2",
-    "yargs": "^17.0.1"
-  },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1",
-    "@googlemaps/markerclusterer": "^2.0.13",
-    "@popperjs/core": "^2.11.6",
-    "anchor-js": "^4.3.1",
-    "bigpicture": "^2.6.2",
+    "anchor-js": "^5.0.0",
     "body-parser": "^1.20.2",
-    "bootstrap": "^5.2.3",
-    "chart.js": "^3.3.2",
-    "choices.js": "^9.0.1",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
+    "choices": "^0.1.3",
     "connect-mongo": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
     "crypto": "^1.0.1",
-    "dayjs": "^1.9.1",
-    "dhtmlx-gantt": "^7.1.12",
-    "dropzone": "^5.9.3",
-    "echarts": "^5.1.1",
+    "dropzone": "^6.0.0-beta.2",
+    "echarts": "^5.4.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.2",
+    "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
-    "feather-icons": "^4.29.0",
+    "feather-icons": "^4.29.1",
     "flatpickr": "^4.6.13",
+    "fontawesome": "^5.6.3",
     "fs": "^0.0.1-security",
-    "fullcalendar": "^5.11.3",
-    "glightbox": "^3.2.0",
-    "gsap": "^3.11.3",
-    "gulp-html": "^5.0.0",
-    "gulp-install": "^1.1.0",
-    "gulp-rollup": "^2.17.0",
-    "imagesloaded": "^4.1.4",
+    "fullcalendar": "^6.1.9",
     "is_js": "^0.9.0",
-    "isotope-layout": "^3.0.6",
-    "isotope-packery": "^2.0.1",
-    "jshint-stylish": "^2.2.1",
-    "leaflet": "^1.6.0",
-    "leaflet.markercluster": "^1.5.0",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "leaflet.tilelayer.colorfilter": "^1.2.5",
     "list.js": "^2.3.1",
     "lodash": "^4.17.21",
-    "lottie-web": "^5.10.0",
-    "mongoose": "^7.6.3",
+    "mongoose": "^8.0.1",
     "mongoose-findorcreate": "^4.0.0",
-    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "passport": "^0.6.0",
+    "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0",
-    "prismjs": "^1.20.0",
-    "rater-js": "^1.0.1",
-    "rollup-plugin-multi-input": "^1.3.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-sourcemaps": "^0.6.3",
-    "sharp": "^0.28.3",
-    "simplebar": "^5.3.9",
+    "path": "^0.12.7",
     "sortablejs": "^1.15.0",
-    "swiper": "^6.6.2",
-    "tinymce": "^6.1.2"
-  },
-  "browserslist": [
-    "last 5 version"
-  ]
+    "swiper": "^11.0.5"
+  }
 }
