--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/markerwithlabel": "^1.2.12",
     "anchor-js": "^5.0.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
