Duty handover part done

--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "sortablejs": "^1.15.0",
     "swiper": "^11.0.5",
     "yargs": "^17.7.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0"
   }
 }
