--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs": "^0.0.1-security",
     "fullcalendar": "^6.1.9",
     "is_js": "^0.9.0",
+    "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "leaflet.tilelayer.colorfilter": "^1.2.5",
@@ -38,6 +39,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.0.1",
     "mongoose-findorcreate": "^4.0.0",
+    "node-webcam": "^0.8.2",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "passport": "^0.7.0",
