--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.1.0",
   "description": "Auxiallary Police Web App",
   "main": "app.js",
+  "engines": {
+    "node": "21.10.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Sharir Shazni",
   "license": "ISC",
   "dependencies": {
     "@google/markerwithlabel": "^1.2.12",
@@ -51,5 +54,13 @@
   },
   "devDependencies": {
     "prettier": "^3.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shrrshazni/pblakmns.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shrrshazni/pblakmns/issues"
+  },
+  "homepage": "https://github.com/shrrshazni/pblakmns#readme"
 }
