--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.0.1",
     "mongoose-findorcreate": "^4.0.0",
+    "node-cron": "^3.0.3",
     "node-webcam": "^0.8.2",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
