--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/markerwithlabel": "^1.2.12",
     "anchor-js": "^5.0.0",
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
@@ -33,6 +34,7 @@
     "fontawesome": "^5.6.3",
     "fs": "^0.0.1-security",
     "fullcalendar": "^6.1.9",
+    "google-maps-api-loader": "^1.1.1",
     "is_js": "^0.9.0",
     "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
@@ -40,6 +42,7 @@
     "leaflet.tilelayer.colorfilter": "^1.2.5",
     "list.js": "^2.3.1",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^3.0.1",
     "mongoose": "^8.0.1",
     "mongoose-findorcreate": "^4.0.0",
     "node-cron": "^3.0.3",
