--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/markerwithlabel": "^1.2.12",
+    "@mapbox/mapbox-sdk": "^0.15.3",
     "anchor-js": "^5.0.0",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
