--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "path": "^0.12.7",
     "sortablejs": "^1.15.0",
     "swiper": "^11.0.5",
+    "three": "^0.159.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
