--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-mongo": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
     "cool-ascii-faces": "^1.3.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dropzone": "^6.0.0-beta.2",
     "echarts": "^5.4.3",
