--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fs": "^0.0.1-security",
     "fullcalendar": "^6.1.9",
     "google-maps-api-loader": "^1.1.1",
+    "install": "^0.13.0",
     "is_js": "^0.9.0",
     "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
