--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "list.js": "^2.3.1",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.0.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.1",
     "mongoose-findorcreate": "^4.0.0",
     "node-cron": "^3.0.3",
