--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "install": "^0.13.0",
     "is_js": "^0.9.0",
     "jsqr": "^1.4.0",
+    "judoscale-express": "^1.2.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "leaflet.tilelayer.colorfilter": "^1.2.5",
